# cage

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  run_batch.py
Post process/analysis/: README.md  analyze_iter017_modulus_proxy_gap.py  build_iter017_target_modulus_bands.py  build_iter017_variable_radius_edges.py  build_iter017_variable_radius_replacement_design.py  build_iter017_variable_radius_skeleton.py  (+6 more)
cage/: __init__.py  cli.py  pipeline.py  rods.py  voronoi.py
datasets/: 68.mat  681.mat  README.md  fjw_abaqus_inputs.json  fjw_input_inventory.json
docs/: 681_pipeline.md  annular_cylinder_voxel_demo.md  background.md  fjw_work_algorithm.md  fjw_workflow_runbook.md  goal.md  how_to_start.md  voxel_torus_demo.md
experiments/: README.md
scripts/: build_fjw_golden_case.py  build_fjw_input_inventory.py  compare_fjw_inp.py  compare_fjw_iteration_outputs.py  export_fjw_reference_viewer_voxels.py  export_fjw_reference_voxels.py  extract_fjw_inp_inputs.py  render_hybrid_exact_full_2000.py  render_hybrid_exact_full_2000_filled.py  render_hybrid_exact_full_2000_monochrome.py  render_hybrid_exact_preview.py  validate_sfepy_rigid2.py
tests/: test_annular_cylinder.py  test_box_voronoi.py  test_fem_analysis_cli.py  test_fjw_abaqus_backend_contract.py  test_fjw_abaqus_real_run_contract.py  test_fjw_coupling.py  test_fjw_direct_solver.py  test_fjw_dynamic_adjoint_pipeline.py  test_fjw_environment.py  test_fjw_golden_cases.py  test_fjw_mma.py  test_fjw_sfepy_backend_contract.py  test_fjw_validation.py  test_fjw_workflow_optimize.py  test_fjw_workflow_regression.py  test_fjw_workflow_sfepy_runner.py  test_fjw_workflow_sfepy_solver_adapters.py  test_fjw_workflow_solver_adapters.py  test_helix.py  test_iter017_mask_seed_radius_sweep.py  test_iter017_seed_radius_sweep.py  test_matlab2stl_pipeline_transform.py  test_modulus.py  test_rerun_asset.py  test_topopt_backfill.py  test_topopt_sampling.py
viewer/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
(+249 files in other folders)
