[project]
name = "helix-voronoi-workspace"
version = "0.1.0"
description = "Helix Voronoi geometry and topology sampling workflows"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy-stl>=3.2.0",
    "scipy>=1.17.1",
]

[project.scripts]
helix-voronoi = "helix_voronoi.cli:main"
topopt-sampling = "topopt_sampling.cli:main"

[build-system]
requires = ["uv_build>=0.11.4,<0.12"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.uv.build-backend]
module-name = ["helix_voronoi", "topopt_sampling"]
