[project]
name = "helix-voronoi-workspace"
version = "0.1.0"
description = "Helix Voronoi geometry and topology sampling workflows"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy-stl>=3.2.0",
    "scikit-image>=0.22",
    "scipy>=1.17.1",
    "sfepy>=2025.4",
]

[project.scripts]
ct-reconstruction = "ct_reconstruction.cli:main"
fem-analysis = "fem_analysis.cli:main"
helix-voronoi = "helix_voronoi.cli:main"
topopt-sampling = "topopt_sampling.cli:main"
matlab2stl-pipeline = "matlab2stl_pipeline.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/ct_reconstruction", "src/fem_analysis", "src/helix_voronoi", "src/topopt_sampling", "src/matlab2stl_pipeline"]
